cabal-version:      2.4
name:               wsrubikc
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jean-Pierre Delouche
maintainer:         jdelouche@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable wsrubikc
    main-is:          Main.hs

    other-modules:    Rbk,TplRbk

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
      base ^>=4.16.4.0,
      rainbow ^>= 0.34.2.2,
      text ^>= 1.2.3.1,
      bytestring ^>= 0.11.3.1
    hs-source-dirs:   app
    default-language: Haskell2010
